# ssh-gen-rs

./: .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  Trunk.toml  renovate.json
.github/workflows/: publish.yml
benches/: key_generation.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/src/cli/: args.rs
cli/src/manager/: manager.rs
cli/src/worker/: message.rs  mod.rs  thread.rs
core/: Cargo.toml
core/benches/: key_generation.rs  keypair.rs  pattern.rs
core/src/: file_io.rs  keypair.rs  lib.rs  pattern.rs
scripts/: check_keypair_valid.sh
src/: file_io.rs  keypair.rs  lib.rs  main.rs  suffix.rs
src/cli/: args.rs
src/core/: file_io.rs  keypair.rs  mod.rs  pattern.rs  suffix.rs
src/manager/: manager.rs  mod.rs  ntfy.rs
src/monitor/: formatter.rs  mod.rs  ntfy.rs  progress.rs  result.rs  results.rs
src/output/: formatter.rs  mod.rs
src/wasm/: mod.rs  worker.rs
src/worker/: generator.rs  message.rs  mod.rs  thread.rs
wasm/: Cargo.toml  index.html  style.css
wasm/src/: key_generator.rs  main.rs  ui.rs
www/: app.js  index.html
