[package]
name = "ssh-gen-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "pkcs8",
    "alloc",
    "pem",
    "std",
] }
indicatif = "0.17.11"
num-format = "0.4.4"
num_cpus = "1.17.0"
rand = "0.8"
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0.140"
ssh-key = "0.6.7"
tokio = { version = "1.45.1", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "key_generation"
harness = false
