[package]
name = "vanity-ssh-rs"
version = "1.1.1"
edition = "2024"
description = "Generate SSH key pairs with custom patterns in the public key"
license = "MIT"
repository = "https://github.com/mogottsch/vanity-ssh-rs"
readme = "README.md"
keywords = ["ssh", "key", "vanity", "generator", "crypto"]
categories = ["cryptography", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
clap = { version = "4.5.40", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "pkcs8",
    "alloc",
    "pem",
    "std",
] }
humantime = "2.2.0"
indicatif = "0.17.11"
num-format = "0.4.4"
num_cpus = "1.17.0"
rand = "0.8"
rayon = "1.10.0"
regex = "1.11.1"
reqwest = { version = "0.11", features = ["blocking", "json"] }
ssh-key = "0.6.7"
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Worker",
    "MessageEvent",
    "Blob",
    "Url"
]}
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
wasm-bindgen-test = "0.3"

[[bench]]
name = "key_generation"
harness = false
