[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
core = { path = "../core" }
clap = { version = "4.5.40", features = ["derive"] }
indicatif = "0.17.11"
num-format = "0.4.4"
num_cpus = "1.17.0"
rayon = "1.10.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1.11.1"

[[bin]]
name = "cli"
path = "src/main.rs"
