[package]
name = "core"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ed25519-dalek = { version = "2.1.1", features = [
    "rand_core",
    "pkcs8",
    "alloc",
    "pem",
    "std",
] }
rand = "0.8"
regex = "1.11.1"
ssh-key = "0.6.7"
humantime = "2.2.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "key_generation"
harness = false

[[bench]]
name = "pattern"
harness = false

[[bench]]
name = "keypair"
harness = false
