[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "wasm"
path = "src/main.rs"

[dependencies]
core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "HtmlInputElement",
    "HtmlButtonElement",
    "HtmlPreElement",
    "HtmlSpanElement",
    "HtmlAnchorElement",
    "Element",
    "Blob",
    "Url",
    "CssStyleDeclaration",
    "DomTokenList",
] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.7"
ed25519-dalek = { version = "2.1.1", features = ["pkcs8"] }
